--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "~2.4.1",
     "jquery": "^3.3.1",
+    "open-iconic": "^1.1.1",
     "rxjs": "~5.1.0",
     "zone.js": "~0.8.4"
   },
