--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
+    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "angular-in-memory-web-api": "^0.3.2",
     "bootstrap": "^4.3.1",
     "core-js": "~2.4.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "open-iconic": "^1.1.1",
     "rxjs": "~5.1.0",
     "zone.js": "~0.8.4"
