--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~4.0.0",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "angular-in-memory-web-api": "^0.3.2",
+    "angular2-token": "^0.2.0-beta.12",
     "bootstrap": "^4.3.1",
     "core-js": "~2.4.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
