--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-token": "^0.2.0-beta.12",
     "bootstrap": "^4.3.1",
     "core-js": "~2.4.1",
+    "enhanced-resolve": "3.3.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
